# skripsi

./: CMakeLists.txt  data kemiringan robot (roll) -14 dengan hip (invers) single support.xlsx  data kemiringan robot (roll) -14 dengan hip (invers).xlsx  data kemiringan robot (roll) -14 dengan hip.xlsx  data kemiringan robot (roll).xlsx  data kemiringan robot pitch double support (invers).xlsx  data kemiringan robot pitch double support dengan hip (invers).xlsx  data kemiringan robot pitch double support dengan hip.xlsx  data kemiringan robot pitch double support.xlsx  data kemiringan robot pitch single support dengan hip (invers).xlsx  data pitch kemiringan robot double support dengan hip (invers).xlsx  fuzzy_terrain.py  inverse_kinematic.py  package.xml  preview_controller.py  servo_controller.py  walk_node.py
data/: comRead_vs_refCOM-coba.xlsx  comRead_vs_refCOM-ove.xlsx  comRead_vs_refCOM.xlsx  data kemiringan robot pitch double support dengan hip (invers).xlsx  data kemiringan robot roll double support.xlsx  data pitch kemiringan robot double support.xlsx  data pitch kemiringan robot single support kanan base.xlsx  data pitch kemiringan robot single support kiri base.xlsx  tuning COM translasi pitch 1 kaki.xlsx  tuning COM translasi pitch.xlsx  tuning COM translasi roll kaki 1.xlsx  tuning COM translasi roll.xlsx
scripts/: calib.json  contoh.py  main.py  mpu9250_node_com.py  rosCall.py  servo.py  servo_handler.py
src/: inverse_kinematic.py  jalan_ditempat.py  jalan_ditempat1.py  jalan_ditempat2.py  mpu9250_node.py  servo_controller.py
srv/: ComputeCOM.srv  (+5 more)
(+4 files in other folders)
